allowed users proto
