# pkg/server/api/v1/proto/api.swagger.json
@@ -326,6 +326,16 @@
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "appDetail.allowedUsers",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
           }
         ],
         "tags": [
@@ -541,6 +551,12 @@
         },
         "mainVolumeClaimName": {
           "type": "string"
+        },
+        "allowedUsers": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
